force-app/main/default/objects/ClientTeamOpportunity_Products__c/ClientTeamOpportunity_Products__c.object-meta.xml
<CustomObject>
    <label>Client Team Opportunities with Products</label>
    <nameField>
        <displayFormat>a-{0000}</displayFormat>
        <label>ClientTeamOpportunity&amp;Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Team Opportunities with Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>