force-app/main/default/objects/ClientTeamOpportunity_Products__c/fields/ClientTeamId__c.field-meta.xml
<CustomField>
    <fullName>ClientTeamId__c</fullName>
    <description>Copy of Client Team ID so that even if the lookup value is lost this value is availiable.</description>
    <label>ClientTeamId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>