force-app/main/default/objects/ClientTeamOpportunity_Products__c/fields/Custom_Client_Team__c.field-meta.xml
<CustomField>
    <fullName>Custom_Client_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Client Team</label>
    <referenceTo>Custom_Client_Team__c</referenceTo>
    <relationshipName>ClientTeamOpportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>