force-app/main/default/objects/ClientTeamOpportunity_Products__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ClientTeamOpportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>