force-app/main/default/objects/ClientTeamOpportunity_Products__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>SB_Product__c</referenceTo>
    <relationshipName>ClientTeamOpportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>